--- a/webti/halaman1.html
+++ b/webti/halaman1.html
@@ -10,6 +10,9 @@
 <a href="halaman2.html">Halaman 2</a>|
 <a href="halaman3.html">Halaman 3</a>|
 <a href="halaman4.html">Halaman 4</a></p>
+<a href="halaman5.html">Halaman 5</a>|
+<a href="halaman6.html">Halaman 6</a>|
+<a href="halaman7.html">Halaman 7</a>
 <p>My first paragraph</p> 
 <marquee direction="down" width="250" height="200" behavior="alternate" style="border:solid">
   <marquee behavior="alternate">
@@ -33,4 +36,5 @@ function myFunction() {
 }
 </script>
 </body>
+
 </html>
